# issm-shakti

./: .gitignore  PIG-SHAKTI.ipynb  PIG-inversion.ipynb  README.md  pyproject.toml  tmp.py
reference/: Greenland.par  runme_Helheim3_winterclean.m  runme_Helheim_continue_winterclean.m
reference/aleah/: PIG(1).par  PIGOutline_2.exp  PIG_shakti_spinup.m  runme_PIG_shakti_continue.m
share/: PIG-inversion.ipynb  PIG.par  PIG_inversion_friction.mat  PIG_shakti_spinup.m  PIG_shakti_standalone.m
src/: PIG.queue  PIG.toolkits  PIG_shakti_spinup.m  PIG_shakti_standalone.m
