[project]
name = "issm-shakti"
version = "0.1.0"
description = ""
authors = [
    {name = "Ethan",email = "ethan.g.pierce@dartmouth.edu"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "jupyter-matlab-proxy (>=0.16.4,<0.17.0)",
    "jupyterlab (>=4.4.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
